fix: info's style

--- a/src/app/Home/about-me/about-me.html
+++ b/src/app/Home/about-me/about-me.html
@@ -1,17 +1,17 @@
-<div class="overflow-hidden bg-indigo-950 py-24 sm:py-32">
-  <div class="mx-auto max-w-7x1 px-6 lg:px-8">
+<div class="overflow-hidden bg-gray-900 py-24 sm:py-32">
+  <div class="mx-auto max-w-7xl px-6 lg:px-8">
     <div class="mx-auto grid max-w-2xl grid-cols-1 gap-x-8 gap-y-16 sm:gap-y-20 lg:mx-0 lg:max-w-none lg:grid-cols-2">
       <div class="lg:pt-4 lg:pr-8">
         <div class="lg:max-w-lg">
           <h2 class="text-base/7 font-semibold text-indigo-400">Sofware Engineer</h2>
-          <p class="mt-2 text-4x1 font-semibold tracking-tight text-pretty text-white sm:text-5xl">Hiram Hernandez</p>
-          <p class="mt-6 textlg/8 text-gray-300">I'm a software developer about 2.5+ years of expirence at retail store. I've been working in diffents process related with the creating of loans and credits systems.</p>
+          <p class="mt-2 text-4xl font-semibold tracking-tight text-pretty text-white sm:text-5xl">Hiram Hernandez</p>
+          <p class="mt-6 text-lg/8 text-gray-300">I'm a software developer about 2.5+ years of expirence at retail store. I've been working in diffents process related with the creating of loans and credits systems.</p>
 
           <dl class="mt-10 max-w-xl space-y-8 text-base/7 text-gray-400 lg:max-w-none">
             <div class="relative pl-9"> 
               <dt class="inline font-semibold text-white">
-                <svg class="absolute top-1 left-1 size-5 text-indigo-400" aria-hidden="true" fill="none" viewBox="0 0 24 24">
-                  <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 16H5a1 1 0 0 1-1-1V5a1 1 0 0 1 1-1h14a1 1 0 0 1 1 1v1M9 12H4m8 8V9h8v11h-8Zm0 0H9m8-4a1 1 0 1 0-2 0 1 1 0 0 0 2 0Z"/>
+                <svg class="absolute top-1 left-1 size-5 text-indigo-400" aria-hidden="true" fill="none" viewBox="0 0 20 20">
+                  <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 16H5a1 1 0 0 1-1-1V5a1 1 0 0 1 1-1h14a1 1 0 0 1 1 1v1M9 12H4m8 8V9h8v11h-8Zm0 0H9m8-4a1 1 0 1 0-2 0 1 1 0 0 0 2 0Z" clip-rule="evenodd" fill-rule="evenodd"/>
                 </svg>
                 FrontEnd.
               </dt>
@@ -22,8 +22,8 @@
 
             <div class="relative pl-9">
               <dt class="inline front-semibold text-white">
-                <svg class="absolute top-1 left-1 size-5 text-indigo-400" aria-hidden="true" fill="none" viewBox="0 0 24 24" data-slot="icon">
-                  <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 12a1 1 0 0 0-1 1v4a1 1 0 0 0 1 1h14a1 1 0 0 0 1-1v-4a1 1 0 0 0-1-1M5 12h14M5 12a1 1 0 0 1-1-1V7a1 1 0 0 1 1-1h14a1 1 0 0 1 1 1v4a1 1 0 0 1-1 1m-2 3h.01M14 15h.01M17 9h.01M14 9h.01"/>
+                <svg class="absolute top-1 left-1 size-5 text-indigo-400" aria-hidden="true" fill="none" viewBox="0 0 20 20" data-slot="icon">
+                  <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 12a1 1 0 0 0-1 1v4a1 1 0 0 0 1 1h14a1 1 0 0 0 1-1v-4a1 1 0 0 0-1-1M5 12h14M5 12a1 1 0 0 1-1-1V7a1 1 0 0 1 1-1h14a1 1 0 0 1 1 1v4a1 1 0 0 1-1 1m-2 3h.01M14 15h.01M17 9h.01M14 9h.01" clip-rule="evenodd" fill-rule="evenodd" />
                 </svg>
                 Backend
               </dt>
@@ -44,7 +44,9 @@
 
         </div>
       </div>
+
+      <img width="2432" height="1442" alt="developer-photo" class="w-3xl max-w-none rounded-xl shadow-xl ring-1 ring-white/10 sm:w-228 md:-ml-4 lg:-ml-0" src="https://tailwindcss.com/plus-assets/img/component-images/dark-project-app-screenshot.png">
+
     </div>
-    <img width="2432" height="1442" alt="developer-photo" class="w-3xl max-w-none rounded-xl shadow-xl ring-1 ring-white/10 sm:w-228 md:-ml-4 lg:-ml-0" src="https://tailwindcss.com/plus-assets/img/component-images/dark-project-app-screenshot.png">
   </div>
 </div>
