--- a/src/app/Home/about-me/about-me.html
+++ b/src/app/Home/about-me/about-me.html
@@ -45,7 +45,7 @@
         </div>
       </div>
 
-      <img width="2432" height="1442" alt="developer-photo" class="w-3xl max-w-none rounded-xl shadow-xl ring-1 ring-white/10 sm:w-228 md:-ml-4 lg:-ml-0" src="https://tailwindcss.com/plus-assets/img/component-images/dark-project-app-screenshot.png">
+      <img alt="developer-photo" class="w-80 md:w-[400px] h-auto rounded-xl shadow-xl ring-1 ring-white/10 mx-auto block" src="../../../assets/img/IMG_0468.png">
 
     </div>
   </div>
