--- a/src/app/Projects/menu/menu.html
+++ b/src/app/Projects/menu/menu.html
@@ -1,1 +1,85 @@
-<p>menu works!</p>
+<div class="relative isolate bg-gray-900 px-6 py-24 sm:py-32 lg:px-8">
+  <div aria-hidden="true" class="absolute inset-x-0 -top-3 -z-10 transform-gpu overflow-hidden px-36 blur-3xl">
+    <div style="clip-path: polygon(74.1% 44.1%, 100% 61.6%, 97.5% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 47.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%, 27.6% 76.8%, 76.1% 97.7%, 74.1% 44.1%)" class="mx-auto aspect-1155/678 w-288.75 bg-linear-to-tr from-[#ff80b5] to-[#9089fc] opacity-20"></div>
+  </div>
+  <div class="mx-auto max-w-4xl text-center">
+    <p class="mt-2 text-5xl font-semibold tracking-tight text-balance text-white sm:text-6xl">These are my personal projects where I have been working </p>
+  </div>
+  <p class="mx-auto mt-6 max-w-2xl text-center text-lg font-medium text-pretty text-gray-400 sm:text-xl/8">Choose one to check my skills.</p>
+  <div class="mx-auto mt-16 grid max-w-lg grid-cols-1 items-center gap-y-6 sm:mt-20 sm:gap-x-8 lg:max-w-4xl lg:grid-cols-2">
+
+
+      <div class="relative rounded-3xl bg-gray-800 p-8 ring-1 ring-white/10 sm:p-10 group overflow-hidden transition-all duration-500 ease-in-out hover:shadow-2xl">
+        <a href="https://dancing-swan-4b6c7d.netlify.app/" target="_blank" class="active:scale-95">
+          <p class="mt-4 flex items-baseline gap-x-2">
+            <span class="text-5xl font-semibold tracking-tight text-white group-hover:text-gray-300">Pokedex</span>
+          </p>
+          <p class="mt-6 text-base/7 text-gray-300">The perfect site to watch all your favorites pokemons.</p>
+
+          <div class="grid grid-rows-[0fr] transition-all duration-500 ease-in-out group-hover:grid-rows-[1fr]">
+            <div class="overflow-hidden">
+              <ul role="list" class="mt-8 space-y-3 text-sm/6 text-gray-300 sm:mt-10">
+                <li class="flex gap-x-3">
+
+                  <svg viewBox="0 0 193.658 193.658" fill="#currentColor" data-slot="icon" aria-hidden="true" class="h-6 w-5 flex-none text-indigo-400">
+                    <path d="M96.829,193.658C43.438,193.658,0,150.22,0,96.829S43.438,0,96.829,0s96.828,43.437,96.828,96.829 S150.221,193.658,96.829,193.658z M4.384,105.308c4.297,47.227,44.118,84.35,92.445,84.35s88.147-37.123,92.444-84.35h-62.802 c-3.692,12.89-15.583,22.35-29.643,22.35s-25.951-9.46-29.644-22.35H4.384z M70.629,91.039C70.217,92.904,70,94.841,70,96.829 c0,14.793,12.035,26.829,26.829,26.829c14.793,0,26.828-12.036,26.828-26.829S111.622,70,96.829,70 c-12.634,0-23.256,8.778-26.089,20.556C70.724,90.724,70.686,90.886,70.629,91.039z M127.333,101.308h62.218 c0.07-1.485,0.106-2.977,0.106-4.479s-0.036-2.994-0.106-4.479h-62.218c0.214,1.462,0.324,2.958,0.324,4.479 S127.547,99.845,127.333,101.308z M4.107,101.308h62.218C66.111,99.845,66,98.35,66,96.829s0.11-3.017,0.324-4.479H4.107 C4.036,93.835,4,95.326,4,96.829S4.036,99.823,4.107,101.308z M126.472,88.35h62.802C184.977,41.123,145.156,4,96.829,4 S8.681,41.123,4.384,88.35h7.03c2.048-20.872,11.643-40.184,27.115-54.511C54.435,19.111,75.14,11,96.829,11c1.104,0,2,0.896,2,2 s-0.896,2-2,2c-41.712,0-77.133,32.081-81.395,73.35h51.751C70.878,75.46,82.77,66,96.829,66S122.781,75.46,126.472,88.35z M96.829,112.446c-8.611,0-15.617-7.006-15.617-15.617c0-8.611,7.006-15.617,15.617-15.617s15.617,7.006,15.617,15.617 C112.447,105.44,105.441,112.446,96.829,112.446z M96.829,85.212c-6.405,0-11.617,5.211-11.617,11.617 c0,6.406,5.212,11.617,11.617,11.617s11.617-5.211,11.617-11.617C108.447,90.423,103.235,85.212,96.829,85.212z"></path> 
+                  </svg>
+                  Maked with CSS and Angular
+                </li>
+
+                <li class="flex gap-x-3">
+                  <svg viewBox="0 0 193.658 193.658" fill="#currentColor" data-slot="icon" aria-hidden="true" class="h-6 w-5 flex-none text-indigo-400">
+                    <path d="M96.829,193.658C43.438,193.658,0,150.22,0,96.829S43.438,0,96.829,0s96.828,43.437,96.828,96.829 S150.221,193.658,96.829,193.658z M4.384,105.308c4.297,47.227,44.118,84.35,92.445,84.35s88.147-37.123,92.444-84.35h-62.802 c-3.692,12.89-15.583,22.35-29.643,22.35s-25.951-9.46-29.644-22.35H4.384z M70.629,91.039C70.217,92.904,70,94.841,70,96.829 c0,14.793,12.035,26.829,26.829,26.829c14.793,0,26.828-12.036,26.828-26.829S111.622,70,96.829,70 c-12.634,0-23.256,8.778-26.089,20.556C70.724,90.724,70.686,90.886,70.629,91.039z M127.333,101.308h62.218 c0.07-1.485,0.106-2.977,0.106-4.479s-0.036-2.994-0.106-4.479h-62.218c0.214,1.462,0.324,2.958,0.324,4.479 S127.547,99.845,127.333,101.308z M4.107,101.308h62.218C66.111,99.845,66,98.35,66,96.829s0.11-3.017,0.324-4.479H4.107 C4.036,93.835,4,95.326,4,96.829S4.036,99.823,4.107,101.308z M126.472,88.35h62.802C184.977,41.123,145.156,4,96.829,4 S8.681,41.123,4.384,88.35h7.03c2.048-20.872,11.643-40.184,27.115-54.511C54.435,19.111,75.14,11,96.829,11c1.104,0,2,0.896,2,2 s-0.896,2-2,2c-41.712,0-77.133,32.081-81.395,73.35h51.751C70.878,75.46,82.77,66,96.829,66S122.781,75.46,126.472,88.35z M96.829,112.446c-8.611,0-15.617-7.006-15.617-15.617c0-8.611,7.006-15.617,15.617-15.617s15.617,7.006,15.617,15.617 C112.447,105.44,105.441,112.446,96.829,112.446z M96.829,85.212c-6.405,0-11.617,5.211-11.617,11.617 c0,6.406,5.212,11.617,11.617,11.617s11.617-5.211,11.617-11.617C108.447,90.423,103.235,85.212,96.829,85.212z"></path> 
+                  </svg>
+                  Call the pokemon public API.
+                </li>
+
+                <li class="flex gap-x-3">
+                  <svg viewBox="0 0 193.658 193.658" fill="#currentColor" data-slot="icon" aria-hidden="true" class="h-6 w-5 flex-none text-indigo-400">
+                    <path d="M96.829,193.658C43.438,193.658,0,150.22,0,96.829S43.438,0,96.829,0s96.828,43.437,96.828,96.829 S150.221,193.658,96.829,193.658z M4.384,105.308c4.297,47.227,44.118,84.35,92.445,84.35s88.147-37.123,92.444-84.35h-62.802 c-3.692,12.89-15.583,22.35-29.643,22.35s-25.951-9.46-29.644-22.35H4.384z M70.629,91.039C70.217,92.904,70,94.841,70,96.829 c0,14.793,12.035,26.829,26.829,26.829c14.793,0,26.828-12.036,26.828-26.829S111.622,70,96.829,70 c-12.634,0-23.256,8.778-26.089,20.556C70.724,90.724,70.686,90.886,70.629,91.039z M127.333,101.308h62.218 c0.07-1.485,0.106-2.977,0.106-4.479s-0.036-2.994-0.106-4.479h-62.218c0.214,1.462,0.324,2.958,0.324,4.479 S127.547,99.845,127.333,101.308z M4.107,101.308h62.218C66.111,99.845,66,98.35,66,96.829s0.11-3.017,0.324-4.479H4.107 C4.036,93.835,4,95.326,4,96.829S4.036,99.823,4.107,101.308z M126.472,88.35h62.802C184.977,41.123,145.156,4,96.829,4 S8.681,41.123,4.384,88.35h7.03c2.048-20.872,11.643-40.184,27.115-54.511C54.435,19.111,75.14,11,96.829,11c1.104,0,2,0.896,2,2 s-0.896,2-2,2c-41.712,0-77.133,32.081-81.395,73.35h51.751C70.878,75.46,82.77,66,96.829,66S122.781,75.46,126.472,88.35z M96.829,112.446c-8.611,0-15.617-7.006-15.617-15.617c0-8.611,7.006-15.617,15.617-15.617s15.617,7.006,15.617,15.617 C112.447,105.44,105.441,112.446,96.829,112.446z M96.829,85.212c-6.405,0-11.617,5.211-11.617,11.617 c0,6.406,5.212,11.617,11.617,11.617s11.617-5.211,11.617-11.617C108.447,90.423,103.235,85.212,96.829,85.212z"></path> 
+                  </svg>
+                  Used ngFor, ngIf and other structural directives.
+                </li>
+              </ul>
+
+
+            </div>
+          </div>
+        </a>
+      </div>
+
+
+      <div class="relative rounded-3xl bg-gray-800 p-8 ring-1 ring-white/10 sm:p-10 group overflow-hidden transition-all duration-500 ease-in-out hover:shadow-2xl">
+        <a href="https://dancing-swan-4b6c7d.netlify.app/" target="_blank" class="active:scale-95">
+
+        <p class="mt-4 flex items-baseline gap-x-2">
+          <span class="text-5xl font-semibold tracking-tight text-white group-hover:text-gray-300">
+              Point of sale
+          </span>
+        </p>
+        <p class="mt-6 text-base/7 text-gray-300">Created to manage all your sales and have more control about your store.</p>
+
+        <div class="grid grid-rows-[0fr] transition-all duration-500 ease-in-out group-hover:grid-rows-[1fr]">
+          <div class="overflow-hidden">
+            <ul role="list" class="mt-8 space-y-3 text-sm/6 text-gray-300 sm:mt-10">
+              <li class="flex gap-x-3">
+                <svg viewBox="0 0 20 20" fill="currentColor" data-slot="icon" aria-hidden="true" class="h-6 w-5 flex-none text-indigo-400">
+                  <path d="M16.704 4.153a.75.75 0 0 1 .143 1.052l-8 10.5a.75.75 0 0 1-1.127.075l-4.5-4.5a.75.75 0 0 1 1.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 0 1 1.05-.143Z" clip-rule="evenodd" fill-rule="evenodd" />
+                </svg>
+                Maked with BootStrap, Angular and Angular Meterial.
+              </li>
+
+              <li class="flex gap-x-3">
+                <svg viewBox="0 0 20 20" fill="currentColor" data-slot="icon" aria-hidden="true" class="h-6 w-5 flex-none text-indigo-400">
+                  <path d="M16.704 4.153a.75.75 0 0 1 .143 1.052l-8 10.5a.75.75 0 0 1-1.127.075l-4.5-4.5a.75.75 0 0 1 1.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 0 1 1.05-.143Z" clip-rule="evenodd" fill-rule="evenodd" />
+                </svg>
+                Used standlone components.
+              </li>
+            </ul>
+          </div>
+        </div>
+       </a>
+      </div>
+    
+  </div>
+</div>
