fix: screen height

--- a/src/app/Blogs/main-blog/main-blog.html
+++ b/src/app/Blogs/main-blog/main-blog.html
@@ -1,4 +1,4 @@
-<main class="grid min-h-full place-items-center bg-gray-900 px-6 py-24 sm:py-32 lg:px-8">
+<main class="grid min-h-screen place-items-center bg-gray-900 px-6 py-24 sm:py-32 lg:px-8">
   <div class="text-center">
     <h1 class="mt-4 text-5xl font-semibold tracking-tight text-balance text-white sm:text-7xl">Page not yet enabled</h1>
     <p class="mt-6 text-lg font-medium text-pretty text-gray-400 sm:text-xl/8">Sorry, we´re working at this page for you.</p>
