--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,4 +1,8 @@
-<app-header></app-header>
-<router-outlet />
-<app-footer></app-footer>
+<div class="flex flex-col min-h-screen">
+    <app-header></app-header>
+        <main class="flex-grow">
+            <router-outlet />
+        </main>
+    <app-footer></app-footer>
+</div>
 
