update about me

--- a/src/app/About-me/linetime/linetime.component.html
+++ b/src/app/About-me/linetime/linetime.component.html
@@ -1,10 +1,13 @@
 <div class="pantalla-completa">
-    <div class="contenedor-grid">
+    <div class="contenedor-grid ">
         <div class="columna-izquierda-layout">
-            <div class="logo-placeholder">Logo</div>
-            <div class="line-container">
-                <div class="line"></div>
+            <div>
+                <img class="w-80 md:w-[50px] h-auto mx-auto block" src="../../../assets/img/Coppel.png" alt="logo-Coppel"
+                >
             </div>
+            <!-- <div class="line-container">
+                <div class="line"></div>
+            </div> -->
         </div>
 
         <div class="columna-derecha">
@@ -14,32 +17,11 @@
             </div>
             <div>
                 <p>
-                    Ando chambeando en Coppel y soy una macana.
+                    Software Engineer, working with Angular, PHP, Go and Java. <br>
+                    I develop web services and web application following the best pratices
                 </p>
             </div>
         </div>
     </div>
 
-
-
-        <div class="contenedor-grid">
-        <div class="columna-izquierda-layout">
-            <div class="logo-placeholder">Logo</div>
-            <div class="line-container">
-                <div class="line"></div>
-            </div>
-        </div>
-
-        <div class="columna-derecha">
-            <div>
-                <h1>Coppel</h1>
-                <p class="date">April 2023 - Present</p>
-            </div>
-            <div>
-                <p>
-                    Ando chambeando en Coppel y soy una macana.
-                </p>
-            </div>
-        </div>
-    </div>
 </div>
