--- a/src/app/About-me/linetime/linetime.component.css
+++ b/src/app/About-me/linetime/linetime.component.css
@@ -43,14 +43,7 @@
     display: flex;
     flex-direction: column;
     align-items: center; /* Centra el logo y la línea horizontalmente */
-}
-
-.logo-placeholder {
-    background-color: #e8f4fd;
-    padding: 10px;
-    border: 2px dashed #3498db;
-    width: 100%;
-    text-align: center;
+    justify-content: center;
 }
 
 .line{
